--- a/index.html
+++ b/index.html
@@ -14,12 +14,34 @@
     <title>Arch Studio</title>
   </head>
   <body>
-    <div id="app">
-      <h2>Vite</h2>
-    </div>
+    <div id="app"></div>
     <header>
-      <h1>Hello, World!</h1>
+      <div class="container">
+        <div class="logo"></div>
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item">Portfolio</li>
+            <li class="nav__item">About Us</li>
+            <li class="nav__item">Contact</li>
+          </ul>
+        </nav>
+      </div>
     </header>
+    <main>
+      <section class="hero">
+        <div class="container">
+          <h1>Project Paramour</h1>
+          <p>
+            Project made for an art museum near Southwest London. Project
+            Paramour is a statement of bold, modern architecture.
+          </p>
+
+          <a href="./src/pages/portfolio.html" class="btn--solid"
+            >See Our Portfolio</a
+          >
+        </div>
+      </section>
+    </main>
     <script type="module" src="/src/main.js"></script>
     <!-- 
   Home
