--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <div id="app"></div>
     <header>
       <div class="container">
-        <div class="logo"></div>
+        <div class="logo">
+          <img src="src/assets/logo.svg" alt="company logo" />
+        </div>
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">Portfolio</li>
