--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <li class="nav__item">Contact</li>
           </ul>
         </nav>
+        <button class="nav-toggle">
+          <img src="/src/assets/icons/icon-hamburger.svg" alt="menu toggle" />
+        </button>
       </div>
     </header>
     <main>
