--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button class="nav-toggle">
           <img src="/src/assets/icons/icon-hamburger.svg" alt="menu toggle" />
         </button>
-        <nav class="nav">
+        <nav class="nav visible">
           <ul class="nav__list">
             <li class="nav__item">Portfolio</li>
             <li class="nav__item">About Us</li>
