style nav list items

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </button>
         <nav class="nav visible">
           <ul class="nav__list">
-            <li class="nav__item">Portfolio</li>
-            <li class="nav__item">About Us</li>
-            <li class="nav__item">Contact</li>
+            <li class="nav__item heading-sm">Portfolio</li>
+            <li class="nav__item heading-sm">About Us</li>
+            <li class="nav__item heading-sm">Contact</li>
           </ul>
         </nav>
       </div>
