--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
       <section class="hero">
         <div class="container">
-          <h1>Project Paramour</h1>
+          <h1 class="heading-lg">Project Paramour</h1>
           <p>
             Project made for an art museum near Southwest London. Project
             Paramour is a statement of bold, modern architecture.
