--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -41,6 +41,7 @@
     <main>
       <section class="hero">
         <div class="container">
+          <div class="overlay"></div>
           <h1 class="heading-lg">Project Paramour</h1>
           <p>
             Project made for an art museum near Southwest London. Project
