--- a/index.html
+++ b/index.html
@@ -48,9 +48,24 @@
             Paramour is a statement of bold, modern architecture.
           </p>
 
-          <a href="./src/pages/portfolio.html" class="btn--solid"
-            >See Our Portfolio</a
-          >
+          <a href="./src/pages/portfolio.html" class="btn--solid">
+            <span>See Our Portfolio</span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="26"
+              height="20"
+              class="arrow"
+            >
+              <g
+                fill="none"
+                fill-rule="evenodd"
+                stroke="#1B1D23"
+                stroke-width="2"
+              >
+                <path d="M15 1l9 9-9 9M0 10h24" />
+              </g>
+            </svg>
+          </a>
         </div>
       </section>
     </main>
