--- a/index.html
+++ b/index.html
@@ -41,7 +41,23 @@
     <main>
       <section class="hero">
         <div class="container">
-          <div class="overlay"></div>
+          <div class="background">
+            <picture>
+              <source
+                media="(min-width:1024px)"
+                srcset="src/assets/home/desktop/image-hero-paramour.jpg"
+              />
+              <source
+                media="(min-width:768px)"
+                srcset="src/assets/home/tablet/image-hero-paramour.jpg"
+              />
+              <img
+                src="src/assets/home/mobile/image-hero-paramour.jpg"
+                alt="background"
+              />
+            </picture>
+            <div class="overlay"></div>
+          </div>
           <h1 class="heading-lg">Project Paramour</h1>
           <p>
             Project made for an art museum near Southwest London. Project
