add rectangle to welcome section

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
       <section class="welcome">
         <div class="container">
+          <div class="accent-rectangle"></div>
           <span class="welcome__title heading-xl">Welcome</span>
           <div class="welcome__text">
             <h2 class="heading-md">Welcome to Arch Studio</h2>
