--- a/index.html
+++ b/index.html
@@ -88,28 +88,33 @@
       <section class="welcome">
         <div class="container">
           <div class="accent-rectangle"></div>
-          <span class="welcome__title heading-xl">Welcome</span>
-          <div class="welcome__text">
-            <h2 class="heading-md">Welcome to Arch Studio</h2>
-            <p>
-              We have a unique network and skillset to help bring your projects
-              to life. Our small team of highly skilled individuals combined
-              with our large network put us in a strong position to deliver
-              exceptional results.
-            </p>
-            <p>
-              Over the past 10 years, we have worked on all kinds of projects.
-              From stations to high-rise buildings, we create spaces that
-              inspire and delight.
-            </p>
-            <p>
-              We work closely with our clients so that we understand the
-              intricacies of each project. This allows us to work in harmony the
-              surrounding area to create truly stunning projects that will stand
-              the test of time.
-            </p>
+          <p class="welcome__title heading-xl">Welcome</p>
+          <div class="welcome__content">
+            <div class="welcome__text">
+              <h2 class="heading-md">Welcome to Arch Studio</h2>
+              <p>
+                We have a unique network and skillset to help bring your
+                projects to life. Our small team of highly skilled individuals
+                combined with our large network put us in a strong position to
+                deliver exceptional results.
+              </p>
+              <p>
+                Over the past 10 years, we have worked on all kinds of projects.
+                From stations to high-rise buildings, we create spaces that
+                inspire and delight.
+              </p>
+              <p>
+                We work closely with our clients so that we understand the
+                intricacies of each project. This allows us to work in harmony
+                the surrounding area to create truly stunning projects that will
+                stand the test of time.
+              </p>
+            </div>
+            <img
+              src="src/assets/home/desktop/image-welcome.jpg"
+              alt="welcome"
+            />
           </div>
-          <img src="src/assets/home/desktop/image-welcome.jpg" alt="welcome" />
         </div>
       </section>
     </main>
