style small team section for mobile

--- a/index.html
+++ b/index.html
@@ -117,6 +117,47 @@
           </div>
         </div>
       </section>
+
+      <section class="small-team">
+        <div class="container">
+          <div class="background">
+            <picture>
+              <source
+                media="(min-width:1024px)"
+                srcset="src/assets/home/desktop/image-small-team.jpg"
+              />
+              <source
+                media="(min-width:768px)"
+                srcset="src/assets/home/tablet/image-small-team.jpg"
+              />
+              <img
+                src="src/assets/home/mobile/image-small-team.jpg"
+                alt="background"
+              />
+            </picture>
+            <div class="overlay"></div>
+          </div>
+          <h2 class="heading-md">Small team, big ideas</h2>
+          <a href="src/pages/about.html" class="btn--solid">
+            <span>About Us</span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="26"
+              height="20"
+              class="arrow"
+            >
+              <g
+                fill="none"
+                fill-rule="evenodd"
+                stroke="#1B1D23"
+                stroke-width="2"
+              >
+                <path d="M15 1l9 9-9 9M0 10h24" />
+              </g>
+            </svg>
+          </a>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
     <!-- 
