add featured content

--- a/index.html
+++ b/index.html
@@ -158,6 +158,34 @@
           </a>
         </div>
       </section>
+
+      <section class="featured">
+        <div class="container">
+          <h2>Featured</h2>
+
+          <a href="src/pages/portfolio.html" class="btn--solid">See all</a>
+
+          <div class="card-container">
+            <div class="card">
+              <span class="number">1</span>
+              <h3>Project Del Sol</h3>
+              <a href="src/pages/portfolio.html">View All Projects</a>
+            </div>
+
+            <div class="card">
+              <span class="number">2</span>
+              <h3>228B Tower</h3>
+              <a href="src/pages/portfolio.html">View All Projects</a>
+            </div>
+
+            <div class="card">
+              <span class="number">3</span>
+              <h3>Le Prototype</h3>
+              <a href="src/pages/portfolio.html">View All Projects</a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
     <!-- 
