--- a/index.html
+++ b/index.html
@@ -161,29 +161,65 @@
 
       <section class="featured">
         <div class="container">
-          <h2>Featured</h2>
-
-          <a href="src/pages/portfolio.html" class="btn--solid">See all</a>
-
+          <div class="title-row">
+            <h2 class="heading-md">Featured</h2>
+            <a href="src/pages/portfolio.html" class="btn--solid">
+              <span>See all</span>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="26"
+                height="20"
+                class="arrow"
+              >
+                <g
+                  fill="none"
+                  fill-rule="evenodd"
+                  stroke="#1B1D23"
+                  stroke-width="2"
+                >
+                  <path d="M15 1l9 9-9 9M0 10h24" />
+                </g>
+              </svg>
+            </a>
+          </div>
           <div class="card-container">
             <div class="card">
-              <span class="number">1</span>
-              <h3>Project Del Sol</h3>
+              <span class="number heading-xl">1</span>
+              <h3 class="heading-sm">Project Del Sol</h3>
               <a href="src/pages/portfolio.html">View All Projects</a>
             </div>
 
             <div class="card">
-              <span class="number">2</span>
-              <h3>228B Tower</h3>
+              <span class="number heading-xl">2</span>
+              <h3 class="heading-sm">228B Tower</h3>
               <a href="src/pages/portfolio.html">View All Projects</a>
             </div>
 
             <div class="card">
-              <span class="number">3</span>
-              <h3>Le Prototype</h3>
+              <span class="number heading-xl">3</span>
+              <h3 class="heading-sm">Le Prototype</h3>
               <a href="src/pages/portfolio.html">View All Projects</a>
             </div>
           </div>
+
+          <a href="src/pages/portfolio.html" class="btn--solid">
+            <span>See all</span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="26"
+              height="20"
+              class="arrow"
+            >
+              <g
+                fill="none"
+                fill-rule="evenodd"
+                stroke="#1B1D23"
+                stroke-width="2"
+              >
+                <path d="M15 1l9 9-9 9M0 10h24" />
+              </g>
+            </svg>
+          </a>
         </div>
       </section>
     </main>
