add footer content

--- a/index.html
+++ b/index.html
@@ -222,6 +222,40 @@
           </a>
         </div>
       </section>
+
+      <footer>
+        <div class="container">
+          <div class="logo">
+            <img src="src/assets/logo.svg" alt="company logo" />
+          </div>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">Portfolio</li>
+              <li class="nav__item">About Us</li>
+              <li class="nav__item">Contact</li>
+            </ul>
+          </nav>
+
+          <a href="src/pages/portfolio.html" class="btn--solid">
+            <span>See Our Portfolio</span>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="26"
+              height="20"
+              class="arrow"
+            >
+              <g
+                fill="none"
+                fill-rule="evenodd"
+                stroke="#1B1D23"
+                stroke-width="2"
+              >
+                <path d="M15 1l9 9-9 9M0 10h24" />
+              </g>
+            </svg>
+          </a>
+        </div>
+      </footer>
     </main>
     <script type="module" src="/src/main.js"></script>
     <!-- 
