--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
       </section>
     </main>
     <footer>
+      <div class="background"></div>
       <div class="container">
         <div class="logo">
           <svg xmlns="http://www.w3.org/2000/svg" width="97" height="40">
