--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
       <section class="hero">
         <div class="container">
-          <div class="background">
+          <!-- <div class="background">
             <picture>
               <source
                 media="(min-width:1024px)"
@@ -57,7 +57,7 @@
               />
             </picture>
             <div class="overlay"></div>
-          </div>
+          </div> -->
           <h1 class="heading-lg">Project Paramour</h1>
           <p>
             Project made for an art museum near Southwest London. Project
