add page indicator

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
   </head>
   <body>
     <div id="app"></div>
+
     <header>
+      <div class="page-indicator">
+        <div class="shape"></div>
+        <p class="page-title">HOME</p>
+      </div>
       <div class="container">
         <div class="logo">
           <img src="src/assets/logo.svg" alt="company logo" />
