add and style slide switcher

--- a/index.html
+++ b/index.html
@@ -70,6 +70,20 @@
               </g>
             </svg>
           </a>
+          <div class="slide-switcher">
+            <div class="slide-indicator active">
+              <p>01</p>
+            </div>
+            <div class="slide-indicator">
+              <p>02</p>
+            </div>
+            <div class="slide-indicator">
+              <p>03</p>
+            </div>
+            <div class="slide-indicator">
+              <p>04</p>
+            </div>
+          </div>
         </div>
       </section>
 
