add click listener to slide switcher

--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
             </svg>
           </a>
           <div class="slide-switcher">
-            <div class="slide-indicator active">
+            <button id="slide-one" class="slide-indicator active">
               <p>01</p>
-            </div>
-            <div class="slide-indicator">
+            </button>
+            <button id="slide-two" class="slide-indicator">
               <p>02</p>
-            </div>
-            <div class="slide-indicator">
+            </button>
+            <button id="slide-three" class="slide-indicator">
               <p>03</p>
-            </div>
-            <div class="slide-indicator">
+            </button>
+            <button id="slide-four" class="slide-indicator">
               <p>04</p>
-            </div>
+            </button>
           </div>
         </div>
       </section>
