update slide text on click, remove p tag from btn

--- a/index.html
+++ b/index.html
@@ -71,18 +71,10 @@
             </svg>
           </a>
           <div class="slide-switcher">
-            <button id="slide-one" class="slide-indicator active">
-              <p>01</p>
-            </button>
-            <button id="slide-two" class="slide-indicator">
-              <p>02</p>
-            </button>
-            <button id="slide-three" class="slide-indicator">
-              <p>03</p>
-            </button>
-            <button id="slide-four" class="slide-indicator">
-              <p>04</p>
-            </button>
+            <button id="slide-one" class="slide-indicator active">01</button>
+            <button id="slide-two" class="slide-indicator">02</button>
+            <button id="slide-three" class="slide-indicator">03</button>
+            <button id="slide-four" class="slide-indicator">04</button>
           </div>
         </div>
       </section>
