--- a/index.html
+++ b/index.html
@@ -36,9 +36,15 @@
         </button>
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item">Portfolio</li>
-            <li class="nav__item">About Us</li>
-            <li class="nav__item">Contact</li>
+            <li class="nav__item">
+              <a href="src/pages/portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav__item">
+              <a href="src/pages/about.html">About Us</a>
+            </li>
+            <li class="nav__item">
+              <a href="src/pages/contact.html">Contact</a>
+            </li>
           </ul>
         </nav>
       </div>
