--- a/index.html
+++ b/index.html
@@ -219,9 +219,15 @@
         </div>
         <nav class="footer-nav">
           <ul class="nav__list">
-            <li class="footer-nav__item">Portfolio</li>
-            <li class="footer-nav__item">About Us</li>
-            <li class="footer-nav__item">Contact</li>
+            <li class="footer-nav__item">
+              <a href="src/pages/portfolio.html">Portfolio</a>
+            </li>
+            <li class="footer-nav__item">
+              <a href="src/pages/about.html">About Us</a>
+            </li>
+            <li class="footer-nav__item">
+              <a href="src/pages/contact.html">Contact</a>
+            </li>
           </ul>
         </nav>
 
