add portfolio content

--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -48,6 +48,60 @@
         </nav>
       </div>
     </header>
+    <main>
+      <section class="portfolio">
+        <div class="container">
+          <div class="card">
+            <h2 class="project-title">Seraph Station</h2>
+            <p class="project-date">September 2019</p>
+          </div>
+          <div class="card">
+            <h2 class="project-title">Eebox Building</h2>
+            <p class="project-date">August 2017</p>
+          </div>
+          <div class="card">
+            <h2 class="project-title">Federal II Tower</h2>
+            <p class="project-date">March 2017</p>
+          </div>
+          <div class="card">
+            <h2 class="project-title">Project Del Sol</h2>
+            <p class="project-date">January 2016</p>
+          </div>
+          <div class="card">
+            <h2 class="project-title">Le Prototype</h2>
+            <p class="project-date">October 2015</p>
+          </div>
+          <div class="card">
+            <h2 class="project-title">228B Tower</h2>
+            <p class="project-date">April 2015</p>
+          </div>
+          <div class="card">
+            <h2 class="project-title">Grand Edelweiss Hotel</h2>
+            <p class="project-date">December 2013</p>
+          </div>
+          <div class="card">
+            <h2 class="project-title">Netcry Tower</h2>
+            <p class="project-date">August 2012</p>
+          </div>
+          <div class="card">
+            <h2 class="project-title">Hypers</h2>
+            <p class="project-date">January 2012</p>
+          </div>
+          <div class="card">
+            <h2 class="project-title">SXIV Tower</h2>
+            <p class="project-date">March 2011</p>
+          </div>
+          <div class="card">
+            <h2 class="project-title">Trinity Bank Tower</h2>
+            <p class="project-date">September 2010</p>
+          </div>
+          <div class="card">
+            <h2 class="project-title">Project Paramour</h2>
+            <p class="project-date">February 2008</p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer>
       <div class="background"></div>
       <div class="container">
@@ -94,52 +148,5 @@
       </div>
     </footer>
     <script type="module" src="/src/main.js"></script>
-    <!-- Portfolio
-
-  Portfolio
-  About Us
-  Contact
-
-  Seraph Station
-  September 2019
-
-  Eebox Building
-  August 2017
-
-  Federal II Tower
-  March 2017
-
-  Project Del Sol
-  January 2016
-
-  Le Prototype
-  October 2015
-
-  228B Tower
-  April 2015
-
-  Grand Edelweiss Hotel
-  December 2013
-
-  Netcry Tower
-  August 2012
-
-  Hypers
-  January 2012
-
-  SXIV Tower
-  March 2011
-
-  Trinity Bank Tower
-  September 2010
-
-  Project Paramour
-  February 2008
-
-  Portfolio
-  About Us
-  Contact
-
-  See Our Portfolio -->
   </body>
 </html>
