--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -52,51 +52,51 @@
       <section class="portfolio">
         <div class="container">
           <div class="card">
-            <h2 class="project-title">Seraph Station</h2>
+            <h2 class="project-title heading-sm">Seraph Station</h2>
             <p class="project-date">September 2019</p>
           </div>
           <div class="card">
-            <h2 class="project-title">Eebox Building</h2>
+            <h2 class="project-title heading-sm">Eebox Building</h2>
             <p class="project-date">August 2017</p>
           </div>
           <div class="card">
-            <h2 class="project-title">Federal II Tower</h2>
+            <h2 class="project-title heading-sm">Federal II Tower</h2>
             <p class="project-date">March 2017</p>
           </div>
           <div class="card">
-            <h2 class="project-title">Project Del Sol</h2>
+            <h2 class="project-title heading-sm">Project Del Sol</h2>
             <p class="project-date">January 2016</p>
           </div>
           <div class="card">
-            <h2 class="project-title">Le Prototype</h2>
+            <h2 class="project-title heading-sm">Le Prototype</h2>
             <p class="project-date">October 2015</p>
           </div>
           <div class="card">
-            <h2 class="project-title">228B Tower</h2>
+            <h2 class="project-title heading-sm">228B Tower</h2>
             <p class="project-date">April 2015</p>
           </div>
           <div class="card">
-            <h2 class="project-title">Grand Edelweiss Hotel</h2>
+            <h2 class="project-title heading-sm">Grand Edelweiss Hotel</h2>
             <p class="project-date">December 2013</p>
           </div>
           <div class="card">
-            <h2 class="project-title">Netcry Tower</h2>
+            <h2 class="project-title heading-sm">Netcry Tower</h2>
             <p class="project-date">August 2012</p>
           </div>
           <div class="card">
-            <h2 class="project-title">Hypers</h2>
+            <h2 class="project-title heading-sm">Hypers</h2>
             <p class="project-date">January 2012</p>
           </div>
           <div class="card">
-            <h2 class="project-title">SXIV Tower</h2>
+            <h2 class="project-title heading-sm">SXIV Tower</h2>
             <p class="project-date">March 2011</p>
           </div>
           <div class="card">
-            <h2 class="project-title">Trinity Bank Tower</h2>
+            <h2 class="project-title heading-sm">Trinity Bank Tower</h2>
             <p class="project-date">September 2010</p>
           </div>
           <div class="card">
-            <h2 class="project-title">Project Paramour</h2>
+            <h2 class="project-title heading-sm">Project Paramour</h2>
             <p class="project-date">February 2008</p>
           </div>
         </div>
@@ -147,6 +147,6 @@
         </a>
       </div>
     </footer>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/scripts/portfolio.js"></script>
   </body>
 </html>
