--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -20,7 +20,7 @@
       <div class="container">
         <div class="page-indicator">
           <div class="shape"></div>
-          <p class="page-title">PORTFOLIO</p>
+          <p class="page-title">ABOUT US</p>
         </div>
         <div class="logo">
           <svg xmlns="http://www.w3.org/2000/svg" width="97" height="40">
@@ -35,10 +35,10 @@
         </button>
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item active">
+            <li class="nav__item">
               <a href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="nav__item">
+            <li class="nav__item active">
               <a href="./about.html">About Us</a>
             </li>
             <li class="nav__item">
@@ -93,7 +93,7 @@
         </a>
       </div>
     </footer>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/scripts/about.js"></script>
     <!-- About Us
 
   Portfolio
