--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -48,6 +48,95 @@
         </nav>
       </div>
     </header>
+
+    <main>
+      <section class="about-hero">
+        <div class="container">
+          <div class="image"></div>
+          <h1 class="heading-xl">About</h1>
+          <div class="content">
+            <h2 class="heading-md">Your team of professionals</h2>
+            <p>
+              Our small team of world-class professionals will work with you
+              every step of the way. Strong relationships are at the core of
+              everything we do. This extends to the relationship our projects
+              have with their surroundings.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="heritage">
+        <div class="container">
+          <div class="content">
+            <h2 class="heading-md">
+              Our <br />
+              Heritage
+            </h2>
+            <p>
+              Founded in 2007, we started as a trio of architects. Our
+              complimentary skills and relentless attention to detail turned
+              Arch into one of the most sought after boutique firms in the
+              country.
+            </p>
+            <p>
+              Speciliazing in Urban Design allowed us to focus on creating
+              exceptional structures that live in harmony with their
+              surroundings. We consider every detail from every surrounding
+              element to inform our designs.
+            </p>
+            <p>
+              Our small team of world-class professionals provides input on
+              every project.
+            </p>
+          </div>
+          <div class="image"></div>
+        </div>
+      </section>
+      <section class="leaders">
+        <div class="container">
+          <div class="title">
+            <h2 class="heading-md">
+              The <br />
+              Leaders
+            </h2>
+          </div>
+          <div class="leader-cards">
+            <div class="leader-card">
+              <img
+                src="../assets/about/desktop/avatar-jake.jpg"
+                alt="Jake Richards headshot"
+              />
+              <h3 class="name heading-sm">Jake Richards</h3>
+              <p class="title">Chief Architect</p>
+            </div>
+            <div class="leader-card">
+              <img
+                src="../assets/about/desktop/avatar-thompson.jpg"
+                alt="Thompson Smith headshot"
+              />
+              <h3 class="name heading-sm">Thompson Smith</h3>
+              <p class="title">Head of Finance</p>
+            </div>
+            <div class="leader-card">
+              <img
+                src="../assets/about/desktop/avatar-jackson.jpg"
+                alt="Jackson Rourke headshot"
+              />
+              <h3 class="name heading-sm">Jackson Rourke</h3>
+              <p class="title">Lead Designer</p>
+            </div>
+            <div class="leader-card">
+              <img
+                src="../assets/about/desktop/avatar-maria.jpg"
+                alt="Maria Simpson headshot"
+              />
+              <h3 class="name heading-sm">Maria Simpson</h3>
+              <p class="title">Senior Architect</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer>
       <div class="background"></div>
       <div class="container">
@@ -94,50 +183,5 @@
       </div>
     </footer>
     <script type="module" src="/src/scripts/about.js"></script>
-    <!-- About Us
-
-  Portfolio
-  About Us
-  Contact
-
-  About
-
-  Your team of professionals
-
-  Our small team of world-class professionals will work with you every step of the way. 
-  Strong relationships are at the core of everything we do. This extends to the 
-  relationship our projects have with their surroundings.
-
-  Our Heritage
-
-  Founded in 2007, we started as a trio of architects. Our complimentary skills and 
-  relentless attention to detail turned Arch into one of the most sought after boutique 
-  firms in the country.
-
-  Speciliazing in Urban Design allowed us to focus on creating exceptional structures that 
-  live in harmony with their surroundings. We consider every detail from every surrounding 
-  element to inform our designs. 
-
-  Our small team of world-class professionals provides input on every project.
-
-  The Leaders
-
-  Jake Richards
-  Chief Architect
-
-  Thompson Smith
-  Head of Finance
-
-  Jackson Rourke
-  Lead Designer
-
-  Maria Simpson
-  Senior Architect
-
-  Portfolio
-  About Us
-  Contact
-
-  See Our Portfolio -->
   </body>
 </html>
