style hero for mobile

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -51,11 +51,12 @@
 
     <main>
       <section class="about-hero">
+        <div class="mobile-image"></div>
         <div class="container">
-          <div class="image"></div>
+          <div class="big-screen-image"></div>
           <h1 class="heading-xl">About</h1>
           <div class="content">
-            <h2 class="heading-md">Your team of professionals</h2>
+            <h2 class="heading-lg">Your team of professionals</h2>
             <p>
               Our small team of world-class professionals will work with you
               every step of the way. Strong relationships are at the core of
