--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -49,7 +49,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="about-main">
       <section class="about-hero">
         <div class="mobile-image"></div>
         <div class="container">
