style heritage for big screens

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -90,7 +90,7 @@
               every project.
             </p>
           </div>
-          <div class="image"></div>
+          <div class="heritage-image"></div>
         </div>
       </section>
       <section class="leaders">
