--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -49,7 +49,7 @@
       </div>
     </header>
 
-    <main class="about-main">
+    <main>
       <section class="about-hero">
         <div class="mobile-image"></div>
         <div class="container">
@@ -68,6 +68,7 @@
       </section>
       <section class="heritage">
         <div class="container">
+          <div class="accent-rectangle"></div>
           <div class="content">
             <h2 class="heading-md">
               Our <br />
