style contact hero

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -48,6 +48,22 @@
         </nav>
       </div>
     </header>
+    <section class="contact-hero">
+      <div class="mobile-image"></div>
+      <div class="container">
+        <div class="big-screen-image"></div>
+        <h1 class="heading-xl">Contact</h1>
+        <div class="content">
+          <div class="accent-rectangle"></div>
+          <h2 class="heading-md">Tell us about your project</h2>
+          <p>
+            We’d love to hear more about your project. Please, leave a message
+            below or give us a call. We have two offices, one in Texas and one
+            in Tennessee. If you find yourself nearby, come say hello!
+          </p>
+        </div>
+      </div>
+    </section>
     <footer>
       <div class="background"></div>
       <div class="container">
@@ -93,7 +109,7 @@
         </a>
       </div>
     </footer>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/scripts/contact.js"></script>
     <!-- Contact
 
   Portfolio
