--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -64,6 +64,68 @@
         </div>
       </div>
     </section>
+
+    <section class="contact-details">
+      <div class="container">
+        <h2 class="heading-md">
+          Contact
+          <br />
+          Details
+        </h2>
+        <div class="main-office">
+          <div class="details">
+            <p class="bold">Main Office</p>
+            <p>Mail: <a href="mailto:archone@mail.com">archone@mail.com</a></p>
+            <p>Address: 1892 Chenoweth Drive TN</p>
+            <p>Phone: <a href="tel:123-456-3451">123-456-3451</a></p>
+          </div>
+          <a href="#" class="btn--solid btn--inverted"
+            ><span>View on Map</span
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="26"
+              height="20"
+              class="arrow"
+            >
+              <g
+                fill="none"
+                fill-rule="evenodd"
+                stroke="#1B1D23"
+                stroke-width="2"
+              >
+                <path d="M15 1l9 9-9 9M0 10h24" />
+              </g>
+            </svg>
+          </a>
+        </div>
+        <div class="office-II">
+          <div class="details">
+            <p class="bold">Office II</p>
+            <p>Mail: <a href="mailto:archtwo@mail.com">archtwo@mail.com</a></p>
+            <p>Address: 3399 Wines Lane TX</p>
+            <p>Phone: <a href="tel:832-123-4321">832-123-4321</a></p>
+          </div>
+          <a href="#" class="btn--solid btn--inverted"
+            ><span>View on Map</span
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="26"
+              height="20"
+              class="arrow"
+            >
+              <g
+                fill="none"
+                fill-rule="evenodd"
+                stroke="#1B1D23"
+                stroke-width="2"
+              >
+                <path d="M15 1l9 9-9 9M0 10h24" />
+              </g>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </section>
     <footer>
       <div class="background"></div>
       <div class="container">
