--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -11,7 +11,13 @@
       href="./assets/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | Arch Studio Website Challenge</title>
+    <title>Arch Studio | About Us</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app"></div>
