add and style contact map

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -143,6 +143,12 @@
         </div>
       </div>
     </section>
+
+    <section class="map">
+      <div class="container">
+        <div class="map-image"></div>
+      </div>
+    </section>
     <footer>
       <div class="background"></div>
       <div class="container">
