--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -149,6 +149,45 @@
         <div class="map-image"></div>
       </div>
     </section>
+
+    <section class="connect">
+      <div class="container">
+        <h2 class="heading-md">
+          Connect
+          <br />
+          with us
+        </h2>
+
+        <form action="" class="contact-form">
+          <p>
+            <input type="text" placeholder="Name" name="name" id="name" />
+          </p>
+          <p>
+            <input type="email" placeholder="Email" name="email" id="email" />
+          </p>
+          <p>
+            <textarea name="message" id="message"></textarea>
+          </p>
+          <button class="btn--solid">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="26"
+              height="20"
+              class="arrow"
+            >
+              <g
+                fill="none"
+                fill-rule="evenodd"
+                stroke="#1B1D23"
+                stroke-width="2"
+              >
+                <path d="M15 1l9 9-9 9M0 10h24" />
+              </g>
+            </svg>
+          </button>
+        </form>
+      </div>
+    </section>
     <footer>
       <div class="background"></div>
       <div class="container">
