style contact form on mobile

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -159,22 +159,19 @@
         </h2>
 
         <form action="" class="contact-form">
-          <p>
+          <div class="inputs">
             <input type="text" placeholder="Name" name="name" id="name" />
-          </p>
-          <p>
+
             <input type="email" placeholder="Email" name="email" id="email" />
-          </p>
-          <p>
-            <textarea name="message" id="message"></textarea>
-          </p>
+
+            <textarea
+              name="message"
+              id="message"
+              placeholder="Message"
+            ></textarea>
+          </div>
           <button class="btn--solid">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="26"
-              height="20"
-              class="arrow"
-            >
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="20">
               <g
                 fill="none"
                 fill-rule="evenodd"
