style contact form on bigger screens

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -152,11 +152,7 @@
 
     <section class="connect">
       <div class="container">
-        <h2 class="heading-md">
-          Connect
-          <br />
-          with us
-        </h2>
+        <h2 class="heading-md">Connect with us</h2>
 
         <form action="" class="contact-form">
           <div class="inputs">
