add required and invalid styling

--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -156,14 +156,27 @@
 
         <form action="" class="contact-form">
           <div class="inputs">
-            <input type="text" placeholder="Name" name="name" id="name" />
+            <input
+              type="text"
+              placeholder="Name"
+              name="name"
+              id="name"
+              required
+            />
 
-            <input type="email" placeholder="Email" name="email" id="email" />
+            <input
+              type="email"
+              placeholder="Email"
+              name="email"
+              id="email"
+              required
+            />
 
             <textarea
               name="message"
               id="message"
               placeholder="Message"
+              required
             ></textarea>
           </div>
           <button class="btn--solid">
