--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="page-indicator">
           <div class="shape"></div>
-          <p class="page-title">PORTFOLIO</p>
+          <p class="page-title">CONTACT</p>
         </div>
         <div class="logo">
           <svg xmlns="http://www.w3.org/2000/svg" width="97" height="40">
@@ -41,13 +41,13 @@
         </button>
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item active">
+            <li class="nav__item">
               <a href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav__item">
               <a href="./about.html">About Us</a>
             </li>
-            <li class="nav__item">
+            <li class="nav__item active">
               <a href="./contact.html">Contact</a>
             </li>
           </ul>
