combine the scripts into one

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -191,6 +191,6 @@
         </a>
       </div>
     </footer>
-    <script type="module" src="/src/scripts/about.js"></script>
+    <script type="module" src="../main.js"></script>
   </body>
 </html>
