--- a/src/pages/portfolio.html
+++ b/src/pages/portfolio.html
@@ -153,6 +153,6 @@
         </a>
       </div>
     </footer>
-    <script type="module" src="/src/scripts/portfolio.js"></script>
+    <script type="module" src="../main.js"></script>
   </body>
 </html>
